--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -11,7 +11,7 @@
 }
 
 #content {
-  @apply #{ bg-gradient-to-b from-blue-400 to-blue-700 min-h-screen flex flex-col justify-center items-center p-8};
+  @apply #{ bg-gradient-to-b from-skydt to-skydb min-h-screen flex flex-col justify-center items-center p-8};
 }
 
 .btn {
