Fix UI, Optimize CSS for production, Add ESlint config for Typescript

--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -15,7 +15,7 @@
 }
 
 .btn {
-  @apply #{ rounded p-1 px-3 text-white bg-blue-600 };
+  @apply #{ rounded p-1 px-3 text-white bg-skydb };
 }
 
 .toggle-path {
