--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -6,12 +6,14 @@
 * {
   @apply #{ text-white };
 
+  margin: 0;
+  padding: 0;
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
 }
 
 #content {
-  @apply #{ bg-gradient-to-b from-skydt to-skydb min-h-screen flex flex-col justify-center items-center p-8 w-full};
+  @apply #{ bg-gradient-to-b from-skydt min-h-full to-skydb flex flex-col justify-center items-center p-8 w-full };
 }
 
 .btn {
